Fix dark mode color issues

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,8 @@
 html, body {
     font-family: 'Inter', sans-serif;
 }
+
+input:-webkit-autofill { 
+    box-shadow: 0px 0px 1000px white inset;
+    -webkit-text-fill-color:black !important;;
+  }
